<resources>
    <string name="app_name">李扬故事汇</string>

    <string name="title_activity_music_player">MusicPlayerActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="title_activity_album">AlbumActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>

    <string name="album_title_0">简介</string>
    <string name="album_title_1">故事</string>
    <string name="login_tip">请先登陆!</string>
    <string name="vip_tip">请先成为会员</string>
    <string name="app_load_more">加载更多</string>
    <string name="app_load_no_more">没有更多了</string>
    <string name="favorite_success">已收藏</string>
    <string name="favorite_cancel">取消收藏</string>

    <string name="will_youth">有志少年的故事</string>
    <string name="mr_black">黑猫警长的故事</string>

    <string name="app_close">关闭</string>

    <!-- Wei xin tips-->
    <string name="wx_not_installed">您未安装微信客户端？</string>

    <!-- Download tips -->
    <string name="download_over_max">最大支持同时下载5个曲目，请稍等</string>
    <string name="download_task_exist">已在下载任务队列中</string>
    <string name="already_downloaded">已下载，请在下载列表里查看</string>
    <string name="downloading">正在下载...</string>

    <!-- Activity Capture-->
    <string name="qr_code">二维码</string>
    <string name="caption_from_gallery">从相册选取二维码</string>

    <!-- Left Nav -->
    <string name="nav_login_register">登录/注册</string>
    <string name="nav_favorite">我的收藏</string>
    <string name="nav_download">我的下载</string>
    <string name="nav_vip">成为会员</string>
    <string name="nav_coupon">兑换码</string>
    <string name="nav_exit">退出</string>

    <!-- Activity Login -->
    <string name="activity_login_title">登陆</string>
    <string name="activity_login_hint_telephone">输入电话号码</string>
    <string name="activity_login_hint_code">输入验证码</string>
    <string name="activity_login_send">发送验证码</string>
    <string name="activity_login_third_login">第三方登陆</string>
    <string name="sms_code_send_success">验证码已发送</string>
    <string name="sms_code_send_fail">验证码发送失败</string>
    <string name="sms_code_correct">验证码正确</string>
    <string name="sms_code_wrong">验证码错误</string>
    <string name="error_telephone_tip">请输入正确的手机号码</string>
    <string name="error_login">请重新登录</string>

    <!-- Activity Favorite -->
    <string name="activity_favorite_title">我的收藏</string>
    <string name="play_all">全部播放</string>

    <string name="immediate_open">立即开通</string>
    <string name="one_year_vip">1年超级会员</string>
    <string name="three_month_vip">3个月会员</string>
    <string name="one_month_vip">1个月会员</string>

    <string name="rmb_100">￥278</string>
    <string name="rmb_28">￥78</string>
    <string name="rmb_9_9">￥30</string>
    <string name="title_activity_charge_vip">成为会员</string>

    <string name="charge_option">充值方式</string>
    <string name="alipay_pay">支付宝支付</string>
    <string name="wechat_pay">微信支付</string>
    <string name="go_pay">去支付</string>

    <!-- Coupon Activity-->
    <string name="coupon_activity_title">兑换码</string>
    <string name="input_hint">请输入10位兑换码</string>
    <string name="coupon_confirm">兑换</string>
    <string name="contact_tip">如遇兑换问题，请联系客服</string>
    <string name="contact_number">010-83068996</string>
    <string name="contact_email">kefu@sxkj.com</string>
    <string name="coupon_success_tip">恭喜，兑换成功</string>
    <string name="coupon_unavailable">无效兑换码</string>
</resources>
