<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorF4F5F7"
    tools:context="com.listory.songkang.com.listory.zealens.activity.coupon.CouponActivity">

    <android.support.v7.widget.Toolbar
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentInsetStart="0dp">
        <ImageView
            android:id="@+id/toolbar_back"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:padding="12dp"
            android:layout_marginLeft="-3dp"
            android:layout_gravity="left"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@mipmap/toolbar_back"/>
        <TextView
            android:id="@+id/toolbar_title"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:singleLine="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:marqueeRepeatLimit="-1"
            android:text="@string/coupon_activity_title"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"/>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp22"
        android:background="@color/colorWhite"
        android:paddingTop="@dimen/dp21"
        android:paddingBottom="@dimen/dp21"
        android:orientation="vertical">
        <EditText
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp50"
            android:hint="@string/input_hint"
            android:textColor="@color/color999999"
            android:textSize="@dimen/sp16"
            android:layout_marginLeft="@dimen/dp15"
            android:layout_marginRight="@dimen/dp15"
            android:paddingLeft="@dimen/dp9"
            android:background="@drawable/rectangle_rc_efefef"/>

        <TextView
            android:id="@+id/tv_error_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp15"
            android:layout_marginLeft="@dimen/sp15"
            android:visibility="gone"
            android:textSize="@dimen/sp14"
            android:textColor="@color/colorFF1F43"
            android:text="@string/coupon_unavailable"/>

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp50"
            android:text="@string/coupon_confirm"
            android:layout_marginLeft="@dimen/dp15"
            android:layout_marginRight="@dimen/dp15"
            android:layout_marginTop="@dimen/dp15"
            android:textSize="@dimen/sp18"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:background="@drawable/rectangle_rc_fbc600"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp90"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <TextView
            style="@style/activity_coupon_tip"
            android:text="@string/contact_tip"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp10"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/activity_coupon_telephone"/>
            <TextView
                style="@style/activity_coupon_tip"
                android:paddingLeft="@dimen/dp15"
                android:text="@string/contact_number"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp10"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/activity_coupon_email"/>
            <TextView
                style="@style/activity_coupon_tip"
                android:paddingLeft="@dimen/dp15"
                android:text="@string/contact_email"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
