<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.listory.songkang.activity.ChargeVipActivity">
    <android.support.v7.widget.Toolbar
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentInsetStart="0dp">
        <ImageView
            android:id="@+id/toolbar_back"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:padding="12dp"
            android:layout_marginLeft="-3dp"
            android:layout_gravity="left"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@mipmap/toolbar_back"/>
        <TextView
            android:id="@+id/toolbar_title"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:singleLine="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:marqueeRepeatLimit="-1"
            android:text="@string/title_activity_charge_vip"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"/>
    </android.support.v7.widget.Toolbar>
    <RelativeLayout
        android:id="@+id/golden_rl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50">
        <ImageView
            android:id="@+id/golden_vip_level"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_alignParentLeft="true"
            android:src="@mipmap/golden_vip"/>
        <TextView
            android:id="@+id/golden_vip_description"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/golden_vip_level"
            android:layout_marginLeft="@dimen/dp10"
            android:gravity="center_vertical"
            android:text="@string/one_year_vip"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:textSize="@dimen/sp20"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/golden_vip_description"
            android:layout_marginLeft="@dimen/dp10"
            android:src="@mipmap/recommend_vip"/>
        <TextView
            android:id="@+id/golden_vip_value"
            style="@style/vip_money_text_view_item"
            android:text="@string/rmb_100"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1"
            android:layout_alignParentTop="true"
            android:background="#f4f5f7"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/silver_rl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50">
        <ImageView
            android:id="@+id/silver_vip_level"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_alignParentLeft="true"
            android:src="@mipmap/silver_vip"/>
        <TextView
            android:id="@+id/silver_vip_description"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/silver_vip_level"
            android:layout_marginLeft="@dimen/dp10"
            android:gravity="center_vertical"
            android:text="@string/three_month_vip"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:textSize="@dimen/sp20"/>
        <TextView
            android:id="@+id/silver_vip_value"
            style="@style/vip_money_text_view_item"
            android:text="@string/rmb_28"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1"
            android:layout_alignParentTop="true"
            android:background="#f4f5f7"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bronze_rl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50">
        <ImageView
            android:id="@+id/bronze_vip_level"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_alignParentLeft="true"
            android:src="@mipmap/bronze_vip"/>
        <TextView
            android:id="@+id/bronze_vip_description"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/bronze_vip_level"
            android:layout_marginLeft="@dimen/dp10"
            android:gravity="center_vertical"
            android:text="@string/one_month_vip"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:textSize="@dimen/sp20"/>
        <TextView
            android:id="@+id/bronze_vip_value"
            style="@style/vip_money_text_view_item"
            android:text="@string/rmb_9_9"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1"
            android:layout_alignParentTop="true"
            android:background="#f4f5f7"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1"
            android:layout_alignParentBottom="true"
            android:background="#f4f5f7"/>
    </RelativeLayout>
    <Button
        android:id="@+id/charge_vip"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:layout_marginTop="@dimen/dp80"
        android:layout_marginLeft="@dimen/dp15"
        android:layout_marginRight="@dimen/dp15"
        android:text="@string/immediate_open"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/sp18"
        android:background="@drawable/rectangle_rc_fbc600"/>
</LinearLayout>
