<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="@mipmap/nav_background"
    android:layout_gravity="start">
    <com.listory.songkang.view.AvatarCircleView
        android:id="@+id/head_image_view"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/dp50"
        android:layout_centerInParent="true"
        android:paddingBottom="@dimen/dp8"
        android:src="@mipmap/default_logout_logo"/>
    <ImageView
        android:id="@+id/iv_vip_flag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignBottom="@id/head_image_view"
        android:visibility="gone"
        android:src="@mipmap/nav_vip_false"/>
    <EditText
        android:id="@+id/edit_name"
        style="@style/NavigationTextView"
        android:layout_below="@id/head_image_view"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:enabled="false"
        android:maxEms="20"
        android:text="登录/注册"
        android:background="@color/colorTransparent"/>
    <TextView
        android:id="@+id/tv_hint"
        style="@style/NavigationTextView"
        android:layout_below="@id/edit_name"
        android:layout_marginTop="12dp"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/sp15"
        android:textColor="@color/color666666"
        android:visibility="gone"
        android:text="点击编辑" />
    <LinearLayout
        android:id="@+id/ll_favorite"
        android:layout_below="@id/edit_name"
        style="@style/NavigationLinearLayout">
        <ImageView
            style="@style/NavigationImageView"
            android:src="@mipmap/nav_favorite"/>
        <TextView
            style="@style/NavigationTextView"
            android:text="@string/nav_favorite"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_download"
        android:layout_below="@id/ll_favorite"
        style="@style/NavigationLinearLayout">
        <ImageView
            style="@style/NavigationImageView"
            android:src="@mipmap/nav_download"/>
        <TextView
            style="@style/NavigationTextView"
            android:text="@string/nav_download"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_vip"
        android:layout_below="@id/ll_download"
        style="@style/NavigationLinearLayout">
        <ImageView
            style="@style/NavigationImageView"
            android:src="@mipmap/nav_vip"/>
        <TextView
            style="@style/NavigationTextView"
            android:text="@string/nav_vip"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_coupon"
        android:layout_below="@id/ll_vip"
        style="@style/NavigationLinearLayout">
        <ImageView
            style="@style/NavigationImageView"
            android:src="@mipmap/nav_coupon"/>
        <TextView
            style="@style/NavigationTextView"
            android:text="@string/nav_coupon"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp20"
        android:layout_marginLeft="@dimen/dp20"
        android:orientation="horizontal">
        <ImageView
            style="@style/NavigationImageView"
            android:layout_marginRight="@dimen/dp8"
            android:src="@mipmap/nav_exit"/>
        <TextView
            style="@style/NavigationTextView"
            android:textSize="@dimen/sp15"
            android:text="@string/nav_exit"/>
    </LinearLayout>
</RelativeLayout>