<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp400"
    android:background="@color/colorWhite"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp55"
            android:text="@string/charge_option"
            android:gravity="center"
            android:textColor="#333333"
            android:textStyle="bold"
            android:textSize="@dimen/sp18"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1"
            android:background="#f4f5f7"/>
        <LinearLayout
            android:id="@+id/wechat_pay"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp55"
            android:background="@drawable/simple_touch_style"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/wechat_selector"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp15"
                android:src="@mipmap/popup_window_select_pay"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp15"
                android:src="@mipmap/popup_window_wechat_pay"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp15"
                android:gravity="center"
                android:textSize="@dimen/sp16"
                android:textColor="#333333"
                android:textStyle="bold"
                android:text="@string/wechat_pay"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1"
            android:background="#f4f5f7"/>
        <LinearLayout
            android:id="@+id/alipay"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp55"
            android:background="@drawable/simple_touch_style"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/alipay_selector"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp15"
                android:src="@mipmap/popup_window_unselect_pay"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp15"
                android:src="@mipmap/popup_window_alipay"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp15"
                android:gravity="center"
                android:textSize="@dimen/sp16"
                android:textColor="#333333"
                android:textStyle="bold"
                android:text="@string/alipay_pay"/>
        </LinearLayout>
    </LinearLayout>
    
    <TextView
        android:id="@+id/go_pay"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp55"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:layout_marginBottom="@dimen/dp12"
        android:gravity="center"
        android:text="@string/go_pay"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/sp20"
        android:textStyle="bold"
        android:background="@drawable/rectangle_rc_fbc600"/>
</LinearLayout>